<resources>

    <!-- Text Values -->
    <string name="app_name">Foodbee</string>
    <string name="to_login">Already have an account? LOGIN</string>
    <string name="to_signup">Don\'t have an account? SIGN UP</string>

    <!-- Payment -->
    <string name="payment">Select Payment Method</string>
    <string name="totalPayment">Total</string>
    <string name="subTotal">Sub Total</string>
    <string name="shippingPayment">Shipping</string>
    <string name="discount">Discount</string>
    <string name="ruler">------------------------------------------------------------------------------------------------</string>

    <!-- Banners -->
    <string name="food_bee">Food Bee</string>
    <string name="tagline">The hive of good food</string>
    <string name="banner_signup">Sign Up!</string>
    <string name="banner_search">Search Here</string>
    <string name="update_profile">Edit Profile</string>
    <string name="cancel_order">Cancel Order!</string>

    <!-- Profile info -->
    <string name="user_name">Nishat Tasnim</string>
    <string name="user_email">tasnim5349@gmail.com</string>
    <string name="user_location">BKZH, JU, Savar, Dhaka</string>
    <string name="user_mobile">01708378125</string>
    <string name="user_password">nishu5349</string>

    <!-- Button Names -->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="search_food">Foods</string>
    <string name="search_rest">Restaurants</string>
    <string name="search_cuis">Cuisine</string>
    <string name="logout">Logout</string>
    <string name="updateProfile">Update Profile Information</string>
    <string name="viewOrderHistory">View Order History</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="help_center">Help Center</string>
    <string name="update">Update</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="confirm_cancel_order">Confirm Cancel Order</string>
    <string name="cod">COD</string>
    <string name="mobileBanking">Bkash</string>
    <string name="bank">Bank</string>
    <string name="confirmPayment">Confirm</string>



    <!-- Hint Names -->
    <string name="hint_name">Enter Full Name</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_search_box">Search by Food, Restaurant or Cuisine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Cancel Order -->
    <string name="order_id">Order ID: </string>
    <string name="cancel_question_title">Why do you want to cancel order?</string>
    <string name="cancel_option1">Late Delivery </string>
    <string name="cancel_option2">Bad Rider </string>
    <string name="cancel_option3">Bad Restaurant </string>
    <string name="cancel_option4">Others </string>
    <string name="cancel_review">Please Provide a Review</string>
    <string name="title_activity_cancel_order">CancelOrder</string>
    <string name="order_number">000003</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>
