<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="104dp"
        android:layout_height="99dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_picture" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrderHistory" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginEnd="271dp"
        android:fontFamily="@font/tahu"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="283dp"
        android:layout_height="41dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/user_name"
        android:textAllCaps="false"
        android:textColor="@color/app_color2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

    <TextView
        android:id="@+id/textViewUserLocation"
        android:layout_width="241dp"
        android:layout_height="27dp"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="@font/app_font"
        android:gravity="center"
        android:text="@string/user_location"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="75dp"

        android:backgroundTint="@color/hint_color"
        android:backgroundTintMode="add"
        android:text="@string/updateProfile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserLocation" />

    <Button
        android:id="@+id/btnOrderHistory"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/hint_color"
        android:text="@string/viewOrderHistory"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateProfile" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="310dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/app_color2"


        android:shadowColor="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrderHistory" />

    <Button
        android:id="@+id/btnTermsConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="210dp"
        android:text="@string/terms_conditions"
        android:backgroundTint="@color/white"
        android:textColor="@color/app_color2"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="284dp"
        android:text="@string/help_center"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:textColor="@color/app_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTermsConditions" />
</androidx.constraintlayout.widget.ConstraintLayout>