<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    >


    <ImageView
        android:id="@+id/backgroundImageLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sign_up_background" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="368dp"
        android:layout_height="104dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/tahu"
        android:gravity="center"
        android:text="@string/food_bee"
        android:textColor="@color/app_color"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <EditText
        android:id="@+id/inputLoginEmail"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/app_color"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTagLine" />

    <EditText
        android:id="@+id/inputLoginPassword"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/app_color"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/shape_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLoginPassword" />

    <TextView
        android:id="@+id/toSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/to_signup"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>



