<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage">

    <ImageView
        android:id="@+id/imageViewSearchpage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background_splash" />

    <TextView
        android:id="@+id/textViewSearchPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/tahu"
        android:text="@string/banner_search"
        android:textColor="@color/app_color"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewReturn" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/app_color"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/hint_search_box"
        android:inputType="textPersonName"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSearchPage" />

    <Button
        android:id="@+id/btnSearchFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/search_food"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSearchRestaurant"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSearchRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:text="@string/search_rest"
        app:layout_constraintStart_toEndOf="@+id/btnSearchFood"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <ImageView
        android:id="@+id/imageViewReturn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cross"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>